# pixel-blast

./: .gitignore  .gitmodules  CMakeLists.txt
src/: game.cpp  game.h  input.cpp  input.h  main.cpp  map.cpp  map.h  player.cpp  player.h  texture.cpp  texture.h
src/ecs/: common.h  component.h  ecs.h  sprite_component.h  transform_component.h
